another dashbord update
...

--- a/packages/smarti_dashboard_package.yaml
+++ b/packages/smarti_dashboard_package.yaml
@@ -1,9 +1,9 @@
 lovelace:
   dashboards:
-    smartiDash: # URL path with a hyphen
+    smarti-dashboard: # URL path with a hyphen
       mode: yaml
-      title: "SMARTi Dash"
-      filename: dashboards/SMARTi_Dash.yaml
+      title: "SMARTi Dashboard"
+      filename: dashboards/SMARTi.yaml
       show_in_sidebar: true
 
     smarti-power-control: # URL path with a hyphen
